@@ -190,6 +190,8 @@ class Controller(cmd.Cmd):
 
     def output(self, stuff):
         if stuff is not None:
+            if isinstance(stuff, unicode):
+                stuff = stuff.encode('utf-8')
             self.stdout.write(stuff + '\n')
     
     def get_supervisor(self):
